--- a/src/app/login-container/login-container.component.html
+++ b/src/app/login-container/login-container.component.html
@@ -61,7 +61,7 @@
     </ion-row>
     <ion-row>
       <ion-col>
-        <ion-button class="ion-button-color">Registrarse</ion-button>
+        <ion-button href="/tabs/tab2" class="ion-button-color">Registrarse</ion-button>
       </ion-col>
     </ion-row>
   </form>
