Fix padding and background color

--- a/src/app/home-container/home-container.component.html
+++ b/src/app/home-container/home-container.component.html
@@ -1,3 +1,4 @@
+<br /><br />
 <ion-grid>
   <ion-row>
     <ion-col><ion-title class="title">Alarmas</ion-title></ion-col>
@@ -6,7 +7,7 @@
   </ion-row>
 </ion-grid>
 
-<ion-list >
+<ion-list class="list" >
   <ion-item class="label" >
       <ion-col>
         <ion-label>9:00 p.m</ion-label>
@@ -48,6 +49,7 @@
         </ion-fab-button>
       </ion-fab-list>
       <ion-fab-list side="start">
+
         <ion-fab-button>
           <ion-icon name="alarm-outline"></ion-icon>
         </ion-fab-button>
