--- a/src/app/login-container/login-container.component.html
+++ b/src/app/login-container/login-container.component.html
@@ -32,12 +32,11 @@
     </ion-grid>
   </ion-row>
   <br>
-  <br>
   <ion-row>
     <br>
     <br>
   </ion-row>
-  <form>
+  <form class="form">
     <ion-item class="input" lines="full">
       <ion-label position="floating">Correo electronico</ion-label>
       <ion-input type="text" required></ion-input>
