--- a/src/app/singup-container/singup-container.component.html
+++ b/src/app/singup-container/singup-container.component.html
@@ -37,7 +37,7 @@
     <br>
     <br>
   </ion-row>
-  <form>
+  <form class="form">
     <ion-item class="input" lines="full">
       <ion-label position="floating">Nombre de usuario</ion-label>
       <ion-input type="text" required></ion-input>
