--- a/src/app/home-container/home-container.component.css
+++ b/src/app/home-container/home-container.component.css
@@ -21,3 +21,14 @@
   right: -399px;
   margin: 216%;
 }
+.list{
+  width: 94%;
+  padding-left: 6%;
+}
+.title{
+  text-align: center;
+  font-family: sans-serif;
+  font-size:140%;
+  font-weight: bold !important;
+}
+
